[package]
name = "msripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
derive = { version = "1", features = []}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
bytes = "1.5.0"
anyhow = "1.0.75"
